--- a/ecoff/src/app/app.component.html
+++ b/ecoff/src/app/app.component.html
@@ -7,38 +7,42 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-  <!-- Bootstrap CSS v5.2.1 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-
   <!-- link css geral -->
   <link rel="stylesheet" href="app.component.css">
   <!-- link css especifico -->
-  <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="principal.css">
   <!-- link google icons -->
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=keyboard_arrow_down" />
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=shopping_cart" />
 </head>
 
 <body>
-  
+
   <header>
     <img src="../assets/ecoGen.png" alt="E-commerce">
+    <nav class="navbar">
+      <a href="" class="nav-bt">Menu</a>
+      <a href="" class="nav-bt">Contato</a>
+      <a href="" class="nav-bt">Avalie-nos</a>
+      <a href="" class="nav-bt cart">
+        <span class="material-symbols-outlined">
+          shopping_cart
+        </span>
+      </a>
+    </nav>
   </header>
 
-  <main></main>
+  <main class="catalogo">
+    <div class="produto">
+      <img src="../assets/produto-1.webp" alt="">
+      <h4>Caneca verde</h4>
+      <h4>R$30,00</h4>
+    </div>
+  </main>
 
   <footer>
   </footer>
 
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
