Correção de Hierarquia de CSS

--- a/ecoff/src/app/menu/menu.component.css
+++ b/ecoff/src/app/menu/menu.component.css
@@ -1,7 +1,11 @@
+.topo {
+    text-align: center;
+}
+
 .catalogo {
     display: flex;
     flex-wrap: wrap;
-  }
+}
 
 .produto {
     height: 300px;
