--- a/ecoff/src/app/app.component.html
+++ b/ecoff/src/app/app.component.html
@@ -1,30 +1,12 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <title>Title</title>
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-  <!-- link css geral -->
-  <link rel="stylesheet" href="app.component.css">
-  <!-- link css especifico -->
-  <link rel="stylesheet" href="principal.css">
-  <!-- link google icons -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=shopping_cart" />
-</head>
-
-<body>
-
+<div class="tudo">
+  <!-- app.component.html -->
   <header>
     <img src="../assets/ecoGen.png" alt="E-commerce">
     <nav class="navbar">
-      <a href="" class="nav-bt">Menu</a>
-      <a href="" class="nav-bt">Contato</a>
-      <a href="" class="nav-bt">Avalie-nos</a>
-      <a href="" class="nav-bt cart">
+      <a routerLink="/" class="nav-bt">Menu</a>
+      <a routerLink="/contato" class="nav-bt">Contato</a>
+      <a routerLink="/avaliacao" class="nav-bt">Avalie-nos</a>
+      <a routerLink="/carrinho" class="nav-bt cart">
         <span class="material-symbols-outlined">
           shopping_cart
         </span>
@@ -32,30 +14,11 @@
     </nav>
   </header>
 
-  <main class="catalogo">
-    <div class="produto">
-      <img src="../assets/produto-1.webp" alt="">
-      <h4>Caneca verde</h4>
-      <h4>R$30,00</h4>
-    </div>
-  </main>
+  <!-- Espaço onde o conteúdo das rotas será carregado -->
+  <router-outlet></router-outlet>
 
   <footer>
+    <!-- Rodapé -->
+    <p>&copy; 2024 Meu E-commerce. Todos os direitos reservados.</p>
   </footer>
-
-</body>
-
-</html>
-
-
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
-<router-outlet />
+</div>
