--- a/ecoff/src/styles.css
+++ b/ecoff/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    background-color: #5a5a5a;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    color: #fff;
+}
