--- a/ecoff/src/app/app.component.html
+++ b/ecoff/src/app/app.component.html
@@ -19,6 +19,6 @@
 
   <footer>
     <!-- Rodapé -->
-    <p>&copy; 2024 Meu E-commerce. Todos os direitos reservados.</p>
+    <p>&copy; 2024 E-commerce Genérico. Todos os direitos reservados.</p>
   </footer>
 </div>
