--- a/ecoff/src/app/carrinho/carrinho.component.html
+++ b/ecoff/src/app/carrinho/carrinho.component.html
@@ -1,1 +1,25 @@
-<p>carrinho works!</p>
+<div class="topo">
+    <h1>Carrinho</h1>
+</div>
+
+<main class="pedido">
+
+    <!-- Unidade de produto -->
+    <div class="produto">
+        <img src="../assets/produto-1.webp" alt="">
+        <h4>Caneca verde</h4>
+        <h4>R$30,00</h4>
+        <span class="material-symbols-outlined">
+            delete
+        </span>
+    </div>
+
+    <div class="fin-div">
+        <button class="finalizar">
+            Finalizar
+            <span class="material-symbols-outlined">
+                shopping_cart_checkout
+            </span>
+        </button>
+    </div>
+</main>
