--- a/ecoff/src/app/contato/contato.component.html
+++ b/ecoff/src/app/contato/contato.component.html
@@ -1,1 +1,14 @@
-<p>contato works!</p>
+<!-- menu.component.html -->
+<div class="topo">
+    <h1>Deseja entrar em contato?</h1>
+</div>
+
+<main class="lista">
+    <ul>
+        <li>Telefone: (81)9xxxx-xxxx</li>
+        <li>Whatsapp: (81)9xxxx-xxxx</li>
+        <li>Email: ecogenARROBAemail.com</li>
+        <li>MSN: EcoGenerico</li>
+        <li>Orkut: ARROBAEcoGen</li>
+    </ul>
+</main>
