--- a/ecoff/src/app/avaliacao/avaliacao.component.html
+++ b/ecoff/src/app/avaliacao/avaliacao.component.html
@@ -23,7 +23,7 @@
     <div class="form-container">
         <form class="opinion-form">
             <textarea id="opinion" name="opinion" rows="4" placeholder="Digite aqui sua opinião..."></textarea>
-            <button type="submit">Enviar</button>
+            <button type="submit"  appLoadingIcon="true">Enviar</button>
         </form>
     </div>
     
