--- a/ecoff/src/app/menu/menu.component.html
+++ b/ecoff/src/app/menu/menu.component.html
@@ -4,10 +4,15 @@
     <p>Escolha um de nossos produtos e coloque no carrinho, nunca iremos entregar :)</p>
 </div>
 
-<main class="catalogo">
-    <div class="produto">
-        <img src="../assets/produto-1.webp" alt="">
-        <h4>Caneca verde</h4>
-        <h4>R$30,00</h4>
+<div class="catalogo" *ngIf="products && products.length > 0; else loading">
+    <div *ngFor="let product of products" class="produto" (click)="addToCart(product)" 
+    appCustomTooltip="Clique aqui para adicionar ao carrinho!" appLoadingIcon="true">
+        <img [src]="product.image" alt="{{ product.title }}" />
+        <h4>{{ product.title | truncate:35 }}</h4>
+        <p>{{ product.price | currency:'BRL' }}</p>
     </div>
-</main>
+</div>
+
+<ng-template #loading>
+    <p class="carregando"  appLoadingIcon="true">Carregando produtos...</p>
+</ng-template>
