--- a/ecoff/src/app/avaliacao/avaliacao.component.css
+++ b/ecoff/src/app/avaliacao/avaliacao.component.css
@@ -69,6 +69,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-bottom: 33px;
 }
 
 button:hover {
