--- a/ecoff/src/app/carrinho/carrinho.component.css
+++ b/ecoff/src/app/carrinho/carrinho.component.css
@@ -24,27 +24,6 @@
     border-radius: 5px;
 }
 
-.produto span {
-    border: 3px red solid;
-    border-radius: 5px;
-    padding: 3px;
-    color: red;
-    transition: background-color 0.2s ease, color 0.3s ease;
-    cursor: pointer;
-}
-
-.produto span:hover {
-    color: white;
-    background-color: red;
-}
-
-.fin-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 95px 0px;
-}
-
 .finalizar {
     width: 300px;
     height: 50px;
@@ -64,4 +43,18 @@
 
 .finalizar:hover {
     background-color: #b69b01;
+}
+
+.mod-fin {
+    display: flex;
+    justify-content: center;
+    margin: 100px 0px;
+}
+
+.alerta {
+    text-align: center;
+    margin: 160px 400px;
+    background-color: rgb(199, 40, 40);
+    padding: 30px;
+    border-radius: 10px;
 }
