--- a/ecoff/src/app/contato/contato.component.html
+++ b/ecoff/src/app/contato/contato.component.html
@@ -5,10 +5,10 @@
 
 <main class="lista">
     <ul>
-        <li>Telefone: (81)9xxxx-xxxx</li>
-        <li>Whatsapp: (81)9xxxx-xxxx</li>
-        <li>Email: ecogenARROBAemail.com</li>
+        <li>Telefone:(81)99999-9999</li>
+        <li>Whatsapp:(81)9999-9999</li>
+        <li>Email: ecogen@email.com</li>
         <li>MSN: EcoGenerico</li>
-        <li>Orkut: ARROBAEcoGen</li>
+        <li>Orkut: @ecoGen</li>
     </ul>
 </main>
