--- a/ecoff/src/app/contato/contato.component.html
+++ b/ecoff/src/app/contato/contato.component.html
@@ -7,8 +7,8 @@
     <ul>
         <li>Telefone:(81)99999-9999</li>
         <li>Whatsapp:(81)9999-9999</li>
-        <li>Email: ecogen@email.com</li>
+        <li>Email: ecogenARROBAemail.com</li>
         <li>MSN: EcoGenerico</li>
-        <li>Orkut: @ecoGen</li>
+        <li>Orkut: ARROBAecoGen</li>
     </ul>
 </main>
