--- a/ecoff/src/styles.css
+++ b/ecoff/src/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #5a5a5a;
+    background-color: #002a72;
     font-family: "Open Sans", sans-serif;
     font-weight: 700;
     color: #fff;
